# advent-of-code

./: .gitlab-ci.yml  Cargo.toml
resources/: test.txt
resources/2019/: day5.txt
src/: main.rs  util.rs
src/aoc2017/: day1.rs  day2.rs  mod.rs
src/aoc2018/: day1.rs  day14.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  mod.rs
src/aoc2019/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  mod.rs
src/aoc2020/: day1.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  day_template.rs  mod.rs
src/aoc2021/: day1.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day_template.rs  mod.rs
src/aoc2022/: day1.rs  mod.rs
src/aoc2023/: day1.rs  day2.rs  mod.rs
