[package]
name = "advent-of-code"
description = "Advent of code solutions, not representative of my usual coding standards, honest"
version = "0.1.0"
authors = ["Nick Palmer <nick@palmr.co.uk>"]

[dependencies]
regex = "1"
lazy_static = "1.4.0"
chrono = "0.4"
nom = "7.1.3"
aho-corasick = "1.1.2"
matches = { version = "0.1.10", features = [] }
phf = { version = "0.11", features = ["macros"] }
